--- a/oxford-nanopore-river-bacteria.html
+++ b/oxford-nanopore-river-bacteria.html
@@ -148,13 +148,16 @@
 <p>The PuntSeq team uses an <a href="#oxford-nanopore-minion">Oxford Nanopore MinION</a> sequencer made by <a href="https://en.wikipedia.org/wiki/Oxford_Nanopore_Technologies">Oxford Nanopore Technologies</a> to sequence the <a href="https://en.wikipedia.org/wiki/16S_ribosomal_RNA">16S</a> region of bacterial DNA, which is about 1500 nucleotides long.</p>
 </div>
 <div class="paragraph">
-<p>The 16S region codes for one of the RNA pieces that makes the <a href="https://en.wikipedia.org/w/index.php?title=Ribosome&amp;oldid=912600990#Bacterial_ribosomes">bacterial ribosome</a>. <a href="https://en.wikipedia.org/wiki/Eukaryote">Eukaryotes</a> don&#8217;t have an analogous ribosome part.</p>
+<p>The 16S region codes for one of the RNA pieces that makes the <a href="https://en.wikipedia.org/w/index.php?title=Ribosome&amp;oldid=912600990#Bacterial_ribosomes">bacterial ribosome</a>.</p>
 </div>
 <div class="paragraph">
 <p>Before sequencing the DNA, we will do a <a href="#pcr">PCR</a> with primers that fit just before and just after the 16S DNA, in well conserved regions expected to be present in all bacteria.</p>
 </div>
 <div class="paragraph">
-<p>This way, we amplify only the 16S region of bacteria, excluding other parts of bacterial genome, and excluding prokaryotes entirely.</p>
+<p><a href="https://en.wikipedia.org/wiki/Eukaryote">Eukaryotes</a> also have an analogous ribosome part, the 18S region, but the PCR primers are selected for targets around the 16S region which are only present in prokaryotes.</p>
+</div>
+<div class="paragraph">
+<p>This way, we amplify only the 16S region of bacteria, excluding other parts of bacterial genome, and excluding eukaryotes entirely.</p>
 </div>
 <div class="paragraph">
 <p>Despite coding such a fundamental piece of RNA, there is still surprisingly variability in the 16S region across different bacteria, and it is those differences will allow us to identify which bacteria are present in the river.</p>
@@ -190,7 +193,10 @@ U-A-G-C-U-A-G-C     G
 <p>Since loops don&#8217;t base pair, they are less crucial in the determination of the secondary structure of the RNA.</p>
 </div>
 <div class="paragraph">
-<p>The variability may however not be large enough to allow us to differentiate between related species which might have the same sequence, but we should at least be able to obtain at least a reasonable <a href="https://en.wikipedia.org/wiki/Phylum">phylum</a> breakdown.</p>
+<p>The variability is such that it is possible to identify individual species apart if full sequences are known with certainty.</p>
+</div>
+<div class="paragraph">
+<p>With the experimental limitations of experiment however, we would only be able to obtain <a href="https://en.wikipedia.org/wiki/Family_(biology)">family</a> or <a href="https://en.wikipedia.org/wiki/Genus">genus</a> level breakdowns.</p>
 </div>
 <div class="sect2">
 <h3 id="why-oxford-nanopore-was-used-instead-of-illumina-for-the-sequencing"><a class="anchor" href="#why-oxford-nanopore-was-used-instead-of-illumina-for-the-sequencing"></a><a class="link" href="#why-oxford-nanopore-was-used-instead-of-illumina-for-the-sequencing">2.1. Why Oxford Nanopore was used instead of Illumina for the sequencing</a></h3>
@@ -198,7 +204,10 @@ U-A-G-C-U-A-G-C     G
 <p><a href="https://en.wikipedia.org/wiki/Illumina,_Inc.">Illumina equipment</a> is currently cheaper per base pair and dominates the human genome sequencing market, but it requires a much higher initial investment for the equipment</p>
 </div>
 <div class="paragraph">
-<p>The Nanopore costs just about 500 dollars for the reusable machine, and 500 dollars for the one usage flow cell which can decode up to 30 billion base pairs, which is about 10 human genomes!</p>
+<p>The reusable Nanopore device costs just <a href="https://web.archive.org/web/20190717141155/https://store.nanoporetech.com/starter-packs/">about 500 dollars</a>, and <a href="https://web.archive.org/web/20190911092809/https://store.nanoporetech.com/flowcells.html">about 500 dollars (50 unit volume)</a> for the single usage flow cell which can decode up to 30 billion base pairs, which is about 10 <a href="https://en.wikipedia.org/wiki/Human_genome">human genomes</a> 1x!</p>
+</div>
+<div class="paragraph">
+<p>Compare that to Illumina which is currently doing about an 1000 dollar human genome at 30x, and a bit less errors per base pair (TODO how much).</p>
 </div>
 <div class="paragraph">
 <p>Other advantages of the MinION over Illumina which didn&#8217;t really matter to this particular experiment are:</p>
@@ -237,15 +246,18 @@ U-A-G-C-U-A-G-C     G
 <div class="ulist">
 <ul>
 <li>
+<p>sea water biodiversity: <a href="http://ocean-microbiome.embl.de/companion.html" class="bare">http://ocean-microbiome.embl.de/companion.html</a></p>
+</li>
+<li>
 <p>food, including searching for desirable microorganisms such as in cheese or bread yeast</p>
 </li>
 <li>
 <p>poo, e.g. to study how the human microbiome influences health. There are companies actively working on this, e.g.: <a href="https://www.microbiotica.com/" class="bare">https://www.microbiotica.com/</a></p>
 </li>
-<li>
-<p>blood, e.g. to search for <a href="https://en.wikipedia.org/wiki/Circulating_tumor_DNA">Circulating tumor DNA</a></p>
-</li>
 </ul>
+</div>
+<div class="paragraph">
+<p>One related application which most people would not consider metagenomics, is that of finding <a href="https://en.wikipedia.org/wiki/Circulating_tumor_DNA">circulating tumor DNA</a> in blood to detect tumors.</p>
 </div>
 </div>
 </div>
@@ -338,13 +350,16 @@ Your browser does not support the video tag.
 <div class="sect2">
 <h3 id="filtration-with-vacuum-pump"><a class="anchor" href="#filtration-with-vacuum-pump"></a><a class="link" href="#filtration-with-vacuum-pump">4.1. Filtration with vacuum pump</a></h3>
 <div class="paragraph">
-<p>The first thing we did was to filter the water samples with a filter that is so fine that not even DNA can pass through, but water can.</p>
+<p>The first thing we did was to filter the water samples with a membrane filter that is so fine that not even bacteria can pass through, but water can.</p>
 </div>
 <div class="paragraph">
-<p>Therefore, after filtration, we would have all particles in the filter, including DNA pieces, entire bacteria and dirt.</p>
+<p>Therefore, after filtration, we would have all particles such as bacteria and larger dirt pieces in the filter.</p>
 </div>
 <div class="paragraph">
-<p>We only needed 400 ml from the 1 liter in each bottle, and this step allows us to reduce those 400 ml volumes to more manageable Eppendorf tube volumes: <a href="#image-an-eppendorf-tube-is-small-and-convenient">Figure 9, &#8220;An Eppendorf tube is small and convenient. <a href="https://commons.wikimedia.org/wiki/File:Microcentrifuge_tube_in_hand.jpg">Source</a>.&#8221;</a>. Reagents are expensive, and centrifuges are small!</p>
+<p>From the 1 liter in each bottle, we only used 400 ml because previous experiments showed that filtering the remaining 600 ml is very time consuming because the membrane filter gets clogged up.</p>
+</div>
+<div class="paragraph">
+<p>Therefore, the filtration step allows us to reduce those 400 ml volumes to more manageable Eppendorf tube volumes: <a href="#image-an-eppendorf-tube-is-small-and-convenient">Figure 9, &#8220;An Eppendorf tube is small and convenient. <a href="https://commons.wikimedia.org/wiki/File:Microcentrifuge_tube_in_hand.jpg">Source</a>.&#8221;</a>. Reagents are expensive, and centrifuges are small!</p>
 </div>
 <div id="image-an-eppendorf-tube-is-small-and-convenient" class="imageblock">
 <div class="content">
@@ -485,7 +500,10 @@ Your browser does not support the video tag.
 <h2 id="pcr"><a class="anchor" href="#pcr"></a><a class="link" href="#pcr">5. PCR</a></h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p><a href="https://en.wikipedia.org/wiki/Polymerase_chain_reaction" class="bare">https://en.wikipedia.org/wiki/Polymerase_chain_reaction</a></p>
+<p><a href="https://en.wikipedia.org/wiki/Polymerase_chain_reaction">"Polymerase chain reaction" on Wikipediajjj</a></p>
+</div>
+<div class="paragraph">
+<p>Because it is considered the less interesting step, and because it takes quite some time, this step was done by the event organizers between the two event days, so I did not get to take many photos.</p>
 </div>
 <div class="paragraph">
 <p>PCR protocols are very standard it seems, all that biologists need to know to reproduce is the time and temperature of each step.</p>
@@ -505,9 +523,6 @@ Your browser does not support the video tag.
 <p>72˚C for 45 seconds</p>
 </li>
 </ul>
-</div>
-<div class="paragraph">
-<p>Because it is considered the less interesting step, and because it takes quite some time, this step was done by the event organizers between the two event days, so I did not get to take many photos.</p>
 </div>
 <div class="paragraph">
 <p>This process used a <a href="#marshal-scientific-mj-research-ptc-200-thermal-cycler">Marshal Scientific MJ Research PTC-200 Thermal Cycler</a>:</p>
@@ -619,13 +634,10 @@ Barcode --- 27S --- 16S --- 1492R</pre>
 <div class="sect2">
 <h3 id="pre-sequencing-preparation"><a class="anchor" href="#pre-sequencing-preparation"></a><a class="link" href="#pre-sequencing-preparation">6.1. Pre-sequencing preparation</a></h3>
 <div class="paragraph">
-<p>First we had to remove PCR byproducts with the <a href="#qiagen-qiaquick-pcr-purification-kit">Qiagen QIAquick PCR Purification Kit</a>.</p>
+<p>One cool thing we did in this procedure was to use <a href="https://en.wikipedia.org/wiki/Magnetic_separation">magnetic separation</a> with magnetic beads to further concentrate the DNA: <a href="#image-ge-magrack-6-pipetting">Figure 22, &#8220;GE MagRack 6 pipetting. <a href="https://commons.wikimedia.org/wiki/File:GE_MagRack_6_pipetting.jpg">Source</a>.&#8221;</a>.</p>
 </div>
 <div class="paragraph">
-<p>One cool thing we did in this procedure was to use <a href="https://en.wikipedia.org/wiki/Magnetic_separation">magnetic separation</a> with magnetic beads to purify the DNA: <a href="#image-ge-magrack-6-pipetting">Figure 22, &#8220;GE MagRack 6 pipetting. <a href="https://commons.wikimedia.org/wiki/File:GE_MagRack_6_pipetting.jpg">Source</a>.&#8221;</a>.</p>
-</div>
-<div class="paragraph">
-<p>The are coated to stick to the DNA, which allows us to easily extract the DNA from the rest of the solution. This is cool, but bio people are borderline obsessed by those beads! Go figure!</p>
+<p>The beads are coated to stick to the DNA, which allows us to easily extract the DNA from the rest of the solution. This is cool, but bio people are borderline obsessed by those beads! Go figure!</p>
 </div>
 <div id="image-ge-magrack-6-pipetting" class="imageblock">
 <div class="content">
@@ -753,7 +765,7 @@ Your browser does not support the video tag.
 <p>This is of course not just a simple direct string matching problem, since like any in experiment, the DNA reads have some errors, so the program has to find the best match even though it is not exact.</p>
 </div>
 <div class="paragraph">
-<p>The PuntSeq team uploaded / will upload the data to well known open databases so that it will be preserved forever! TODO link.</p>
+<p>The PuntSeq team uploaded / will upload the data to well known open databases so that it will be preserved forever! When ready, a link to the data will be uploaded to: <a href="https://www.puntseq.co.uk/data" class="bare">https://www.puntseq.co.uk/data</a></p>
 </div>
 </div>
 </div>
