2349217a01663b8b0dc5022810fe23466df23421

--- a/oxford-nanopore-river-bacteria.html
+++ b/oxford-nanopore-river-bacteria.html
@@ -587,7 +587,7 @@ Barcode --- 27S --- 16S --- 1492R</pre>
 <p>And so this is the first thing we did on the second day!</p>
 </div>
 <div class="paragraph">
-<p><a href="https://en.wikipedia.org/wiki/Gel_electrophoresis">Gel electrophoresis</a> separates molecules by their charge-to-mass ratio.</p>
+<p><a href="https://en.wikipedia.org/wiki/Gel_electrophoresis">Gel electrophoresis</a> separates molecules by their charge-to-mass ratio. It is one of those ultra common lab procedures!</p>
 </div>
 <div class="paragraph">
 <p>This allows us to determine how long are the DNA fragments present in our solution.</p>
