eb25101a03eaaf01310d84739440307b0c4010be

--- a/db/join.html
+++ b/db/join.html
@@ -328,6 +328,12 @@ three   9
 <p><code class="highlighter-rouge">FULL OUTER JOIN</code> (select at least one item from both sides) is not present as of MySQL 5.5, but can be emulated with <code class="highlighter-rouge">UNION</code>: <a href="http://stackoverflow.com/questions/7978663/mysql-full-join/7978665#7978665">http://stackoverflow.com/questions/7978663/mysql-full-join/7978665#7978665</a>.</p>
 
     </main>
+    <footer>
+        <div>License: <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC-BY-SA 4.0</a> unless noted</div>
+        <div>Suggestions and corrections: <a href="https://github.com/cirosantilli/cirosantilli.github.io/issues">https://github.com/cirosantilli/cirosantilli.github.io/issues</a></div>
+        <div>Website source code: <a href="https://github.com/cirosantilli/cirosantilli.github.io">https://github.com/cirosantilli/cirosantilli.github.io</a></div>
+        <div>Website version: <a href="https://github.com/cirosantilli/cirosantilli.github.io/commit/eb25101a03eaaf01310d84739440307b0c4010be">eb25101a03eaaf01310d84739440307b0c4010be</a></div>
+    </footer>
     
 
     
