--- a/db/mysqladmin.html
+++ b/db/mysqladmin.html
@@ -51,6 +51,12 @@
 <p><code class="highlighter-rouge">password</code> here is a <code class="highlighter-rouge">mysqladmin</code> subcommand. It seems that it is not possible to change the password of another user with this method. Use <code class="highlighter-rouge">SET PASSWORD</code> or <code class="highlighter-rouge">UPDATE PASSWORD</code> for that instead.</p>
 
     </main>
+    <footer>
+        <div>License: <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC-BY-SA 4.0</a> unless noted</div>
+        <div>Suggestions and corrections: <a href="https://github.com/cirosantilli/cirosantilli.github.io/issues">https://github.com/cirosantilli/cirosantilli.github.io/issues</a></div>
+        <div>Website source code: <a href="https://github.com/cirosantilli/cirosantilli.github.io">https://github.com/cirosantilli/cirosantilli.github.io</a></div>
+        <div>Website version: <a href="https://github.com/cirosantilli/cirosantilli.github.io/commit/eb25101a03eaaf01310d84739440307b0c4010be">eb25101a03eaaf01310d84739440307b0c4010be</a></div>
+    </footer>
     
 
     
