--- a/index.html
+++ b/index.html
@@ -124,18 +124,17 @@
 </li>
 <li><a href="#ciro-santillis-website">1.7. Ciro Santilli&#8217;s website</a>
 <ul class="sectlevel3">
-<li><a href="#license-of-ciro-santillis-website">1.7.1. License of Ciro Santilli&#8217;s website</a></li>
-<li><a href="#how-to-develop-ciro-santillis-website">1.7.2. How to develop Ciro Santilli&#8217;s website</a></li>
-<li><a href="#unmigrated-sections-of-the-old-version-of-ciro-santillis-website">1.7.3. Unmigrated sections of the old version of Ciro Santilli&#8217;s website</a></li>
-<li><a href="#why-ciro-santilli-removed-disqus-comments-from-his-website-in-2019-05-04">1.7.4. Why Ciro Santilli removed Disqus comments from his website in 2019-05-04</a></li>
-<li><a href="#dns-configuration-of-ciro-santillis-website">1.7.5. DNS configuration of Ciro Santilli&#8217;s website</a></li>
-<li><a href="#the-css-of-ciro-santillis-website-looks-broken">1.7.6. The CSS of Ciro Santilli&#8217;s website looks broken</a></li>
-<li><a href="#ciro-santillis-website-is-not-mobile-friendly">1.7.7. Ciro Santilli&#8217;s website is not mobile friendly</a></li>
-<li><a href="#mathematics-typesetting-setup-of-ciro-santillis-website">1.7.8. Mathematics typesetting setup of Ciro Santilli&#8217;s website</a></li>
-<li><a href="#media-rationale-of-ciro-santillis-website">1.7.9. Media rationale of Ciro Santilli&#8217;s website</a>
+<li><a href="#how-to-develop-ciro-santillis-website">1.7.1. How to develop Ciro Santilli&#8217;s website</a></li>
+<li><a href="#unmigrated-sections-of-the-old-version-of-ciro-santillis-website">1.7.2. Unmigrated sections of the old version of Ciro Santilli&#8217;s website</a></li>
+<li><a href="#why-ciro-santilli-removed-disqus-comments-from-his-website-in-2019-05-04">1.7.3. Why Ciro Santilli removed Disqus comments from his website in 2019-05-04</a></li>
+<li><a href="#dns-configuration-of-ciro-santillis-website">1.7.4. DNS configuration of Ciro Santilli&#8217;s website</a></li>
+<li><a href="#the-css-of-ciro-santillis-website-looks-broken">1.7.5. The CSS of Ciro Santilli&#8217;s website looks broken</a></li>
+<li><a href="#ciro-santillis-website-is-not-mobile-friendly">1.7.6. Ciro Santilli&#8217;s website is not mobile friendly</a></li>
+<li><a href="#mathematics-typesetting-setup-of-ciro-santillis-website">1.7.7. Mathematics typesetting setup of Ciro Santilli&#8217;s website</a></li>
+<li><a href="#media-rationale-of-ciro-santillis-website">1.7.8. Media rationale of Ciro Santilli&#8217;s website</a>
 <ul class="sectlevel4">
-<li><a href="#media-rationale-of-ciro-santillis-website--keeping-pages-light">1.7.9.1. Keeping pages light</a></li>
-<li><a href="#media-rationale-of-ciro-santillis-website--where-to-store-images">1.7.9.2. Where to store images</a></li>
+<li><a href="#media-rationale-of-ciro-santillis-website--keeping-pages-light">1.7.8.1. Keeping pages light</a></li>
+<li><a href="#media-rationale-of-ciro-santillis-website--where-to-store-images">1.7.8.2. Where to store images</a></li>
 </ul>
 </li>
 </ul>
@@ -2014,13 +2013,7 @@
 <p><a href="#ciro-santilli">Ciro Santilli</a>'s website is hosted at <a href="https://cirosantilli.com" class="bare">https://cirosantilli.com</a>.</p>
 </div>
 <div class="sect3">
-<h4 id="license-of-ciro-santillis-website"><a class="anchor" href="#license-of-ciro-santillis-website"></a><a class="link" href="#license-of-ciro-santillis-website">1.7.1. License of Ciro Santilli&#8217;s website</a></h4>
-<div class="paragraph">
-<p><a href="#ciro-santilli">Ciro Santilli</a>'s website is licensed as: <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a> unless otherwise noted on a more specific page or header. The license can also be found at: <a href="LICENSE" class="bare">LICENSE</a>.</p>
-</div>
-</div>
-<div class="sect3">
-<h4 id="how-to-develop-ciro-santillis-website"><a class="anchor" href="#how-to-develop-ciro-santillis-website"></a><a class="link" href="#how-to-develop-ciro-santillis-website">1.7.2. How to develop Ciro Santilli&#8217;s website</a></h4>
+<h4 id="how-to-develop-ciro-santillis-website"><a class="anchor" href="#how-to-develop-ciro-santillis-website"></a><a class="link" href="#how-to-develop-ciro-santillis-website">1.7.1. How to develop Ciro Santilli&#8217;s website</a></h4>
 <div class="paragraph">
 <p>Ciro&#8217;s website is powered by <a href="https://pages.github.com">GitHub Pages</a> and <a href="https://github.com/asciidoctor/jekyll-asciidoc">Jekyll Asciidoc</a>.</p>
 </div>
@@ -2109,7 +2102,7 @@ git commit -m 'update gems'</pre>
 </div>
 </div>
 <div class="sect3">
-<h4 id="unmigrated-sections-of-the-old-version-of-ciro-santillis-website"><a class="anchor" href="#unmigrated-sections-of-the-old-version-of-ciro-santillis-website"></a><a class="link" href="#unmigrated-sections-of-the-old-version-of-ciro-santillis-website">1.7.3. Unmigrated sections of the old version of Ciro Santilli&#8217;s website</a></h4>
+<h4 id="unmigrated-sections-of-the-old-version-of-ciro-santillis-website"><a class="anchor" href="#unmigrated-sections-of-the-old-version-of-ciro-santillis-website"></a><a class="link" href="#unmigrated-sections-of-the-old-version-of-ciro-santillis-website">1.7.2. Unmigrated sections of the old version of Ciro Santilli&#8217;s website</a></h4>
 <div class="paragraph">
 <p>It is interesting to see how your own ideas shift with time, and <a href="#ciro-santilli">Ciro Santilli</a> doesn&#8217;t think the following are very important anymore, so he was lazy to migrate them:</p>
 </div>
@@ -2131,7 +2124,7 @@ git commit -m 'update gems'</pre>
 </div>
 </div>
 <div class="sect3">
-<h4 id="why-ciro-santilli-removed-disqus-comments-from-his-website-in-2019-05-04"><a class="anchor" href="#why-ciro-santilli-removed-disqus-comments-from-his-website-in-2019-05-04"></a><a class="link" href="#why-ciro-santilli-removed-disqus-comments-from-his-website-in-2019-05-04">1.7.4. Why Ciro Santilli removed Disqus comments from his website in 2019-05-04</a></h4>
+<h4 id="why-ciro-santilli-removed-disqus-comments-from-his-website-in-2019-05-04"><a class="anchor" href="#why-ciro-santilli-removed-disqus-comments-from-his-website-in-2019-05-04"></a><a class="link" href="#why-ciro-santilli-removed-disqus-comments-from-his-website-in-2019-05-04">1.7.3. Why Ciro Santilli removed Disqus comments from his website in 2019-05-04</a></h4>
 <div class="paragraph">
 <p>Commit: <a href="https://github.com/cirosantilli/cirosantilli.github.io/commit/794705a201a79b5128934e69df85e3511655c03f" class="bare">https://github.com/cirosantilli/cirosantilli.github.io/commit/794705a201a79b5128934e69df85e3511655c03f</a></p>
 </div>
@@ -2188,7 +2181,7 @@ git commit -m 'update gems'</pre>
 </div>
 </div>
 <div class="sect3">
-<h4 id="dns-configuration-of-ciro-santillis-website"><a class="anchor" href="#dns-configuration-of-ciro-santillis-website"></a><a class="link" href="#dns-configuration-of-ciro-santillis-website">1.7.5. DNS configuration of Ciro Santilli&#8217;s website</a></h4>
+<h4 id="dns-configuration-of-ciro-santillis-website"><a class="anchor" href="#dns-configuration-of-ciro-santillis-website"></a><a class="link" href="#dns-configuration-of-ciro-santillis-website">1.7.4. DNS configuration of Ciro Santilli&#8217;s website</a></h4>
 <div class="paragraph">
 <p>AKA how this <a href="https://github.com/cirosantilli/cirosantilli.github.io">GitHub page</a> gets served under the domain: <a href="https://cirosantilli.com" class="bare">https://cirosantilli.com</a></p>
 </div>
@@ -2232,19 +2225,19 @@ CNAME   www     cirosantilli.github.io  1 Hour</pre>
 </div>
 </div>
 <div class="sect3">
-<h4 id="the-css-of-ciro-santillis-website-looks-broken"><a class="anchor" href="#the-css-of-ciro-santillis-website-looks-broken"></a><a class="link" href="#the-css-of-ciro-santillis-website-looks-broken">1.7.6. The CSS of Ciro Santilli&#8217;s website looks broken</a></h4>
+<h4 id="the-css-of-ciro-santillis-website-looks-broken"><a class="anchor" href="#the-css-of-ciro-santillis-website-looks-broken"></a><a class="link" href="#the-css-of-ciro-santillis-website-looks-broken">1.7.5. The CSS of Ciro Santilli&#8217;s website looks broken</a></h4>
 <div class="paragraph">
 <p>That which does not exist, cannot be broken.</p>
 </div>
 </div>
 <div class="sect3">
-<h4 id="ciro-santillis-website-is-not-mobile-friendly"><a class="anchor" href="#ciro-santillis-website-is-not-mobile-friendly"></a><a class="link" href="#ciro-santillis-website-is-not-mobile-friendly">1.7.7. Ciro Santilli&#8217;s website is not mobile friendly</a></h4>
+<h4 id="ciro-santillis-website-is-not-mobile-friendly"><a class="anchor" href="#ciro-santillis-website-is-not-mobile-friendly"></a><a class="link" href="#ciro-santillis-website-is-not-mobile-friendly">1.7.6. Ciro Santilli&#8217;s website is not mobile friendly</a></h4>
 <div class="paragraph">
 <p>True <a href="#art">Art</a> cannot be consumed in mobile format.</p>
 </div>
 </div>
 <div class="sect3">
-<h4 id="mathematics-typesetting-setup-of-ciro-santillis-website"><a class="anchor" href="#mathematics-typesetting-setup-of-ciro-santillis-website"></a><a class="link" href="#mathematics-typesetting-setup-of-ciro-santillis-website">1.7.8. Mathematics typesetting setup of Ciro Santilli&#8217;s website</a></h4>
+<h4 id="mathematics-typesetting-setup-of-ciro-santillis-website"><a class="anchor" href="#mathematics-typesetting-setup-of-ciro-santillis-website"></a><a class="link" href="#mathematics-typesetting-setup-of-ciro-santillis-website">1.7.7. Mathematics typesetting setup of Ciro Santilli&#8217;s website</a></h4>
 <div class="paragraph">
 <p>Inline: \(\sqrt{2+2} = 2\)</p>
 </div>
@@ -2262,9 +2255,9 @@ CNAME   www     cirosantilli.github.io  1 Hour</pre>
 </div>
 </div>
 <div class="sect3">
-<h4 id="media-rationale-of-ciro-santillis-website"><a class="anchor" href="#media-rationale-of-ciro-santillis-website"></a><a class="link" href="#media-rationale-of-ciro-santillis-website">1.7.9. Media rationale of Ciro Santilli&#8217;s website</a></h4>
+<h4 id="media-rationale-of-ciro-santillis-website"><a class="anchor" href="#media-rationale-of-ciro-santillis-website"></a><a class="link" href="#media-rationale-of-ciro-santillis-website">1.7.8. Media rationale of Ciro Santilli&#8217;s website</a></h4>
 <div class="sect4">
-<h5 id="media-rationale-of-ciro-santillis-website--keeping-pages-light"><a class="anchor" href="#media-rationale-of-ciro-santillis-website--keeping-pages-light"></a><a class="link" href="#media-rationale-of-ciro-santillis-website--keeping-pages-light">1.7.9.1. Keeping pages light</a></h5>
+<h5 id="media-rationale-of-ciro-santillis-website--keeping-pages-light"><a class="anchor" href="#media-rationale-of-ciro-santillis-website--keeping-pages-light"></a><a class="link" href="#media-rationale-of-ciro-santillis-website--keeping-pages-light">1.7.8.1. Keeping pages light</a></h5>
 <div class="paragraph">
 <p>It is true that one image is worth a thousand words, but unfortunately it is also true that one image takes up at least as much bytes as a thousand words!</p>
 </div>
@@ -2301,7 +2294,7 @@ CNAME   www     cirosantilli.github.io  1 Hour</pre>
 </div>
 </div>
 <div class="sect4">
-<h5 id="media-rationale-of-ciro-santillis-website--where-to-store-images"><a class="anchor" href="#media-rationale-of-ciro-santillis-website--where-to-store-images"></a><a class="link" href="#media-rationale-of-ciro-santillis-website--where-to-store-images">1.7.9.2. Where to store images</a></h5>
+<h5 id="media-rationale-of-ciro-santillis-website--where-to-store-images"><a class="anchor" href="#media-rationale-of-ciro-santillis-website--where-to-store-images"></a><a class="link" href="#media-rationale-of-ciro-santillis-website--where-to-store-images">1.7.8.2. Where to store images</a></h5>
 <div class="paragraph">
 <p>Since images are large, they bring the following challenges:</p>
 </div>
@@ -5397,6 +5390,12 @@ c' &amp; = \frac{x_2' - x_1'}{t_2' - t_1'} \\
 </div>
 </div>
     </main>
+    <footer>
+        <div>License: <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC-BY-SA 4.0</a> unless noted</div>
+        <div>Suggestions and corrections: <a href="https://github.com/cirosantilli/cirosantilli.github.io/issues">https://github.com/cirosantilli/cirosantilli.github.io/issues</a></div>
+        <div>Website source code: <a href="https://github.com/cirosantilli/cirosantilli.github.io">https://github.com/cirosantilli/cirosantilli.github.io</a></div>
+        <div>Website version: <a href="https://github.com/cirosantilli/cirosantilli.github.io/commit/eb25101a03eaaf01310d84739440307b0c4010be">eb25101a03eaaf01310d84739440307b0c4010be</a></div>
+    </footer>
     
 
     
