--- a/oxford-nanopore-river-bacteria.html
+++ b/oxford-nanopore-river-bacteria.html
@@ -243,7 +243,7 @@ U-A-G-C-U-A-G-C     G
 </div>
 </li>
 <li>
-<p>long reads which can be necessary for long repetitive regions</p>
+<p>long reads which can be necessary for long repetitive regions. For further info see the: <a href="https://en.wikipedia.org/wiki/Sequence_alignment">"Sequence alignment" page on Wikipedia</a>.</p>
 </li>
 </ul>
 </div>
@@ -998,6 +998,12 @@ Your browser does not support the video tag.
 </div>
 </div>
     </main>
+    <footer>
+        <div>License: <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC-BY-SA 4.0</a> unless noted</div>
+        <div>Suggestions and corrections: <a href="https://github.com/cirosantilli/cirosantilli.github.io/issues">https://github.com/cirosantilli/cirosantilli.github.io/issues</a></div>
+        <div>Website source code: <a href="https://github.com/cirosantilli/cirosantilli.github.io">https://github.com/cirosantilli/cirosantilli.github.io</a></div>
+        <div>Website version: <a href="https://github.com/cirosantilli/cirosantilli.github.io/commit/eb25101a03eaaf01310d84739440307b0c4010be">eb25101a03eaaf01310d84739440307b0c4010be</a></div>
+    </footer>
     
 
     
