--- a/window-blackout.html
+++ b/window-blackout.html
@@ -111,6 +111,12 @@
 <p>I also considered getting one of those “Perfect Fit Blinds” <a href="https://www.blindsdirect.co.uk/perfect-fit-roller-blinds">https://www.blindsdirect.co.uk/perfect-fit-roller-blinds</a> (<a href="http://web.archive.org/save/https://www.blindsdirect.co.uk/perfect-fit-roller-blinds">archive</a>) which fit between the glass and the insulation. This looks like it could work. But I didn’t go for it in the end because my window has 3 glass panels, so I would have to get three of those blinds separately.</p>
 
     </main>
+    <footer>
+        <div>License: <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC-BY-SA 4.0</a> unless noted</div>
+        <div>Suggestions and corrections: <a href="https://github.com/cirosantilli/cirosantilli.github.io/issues">https://github.com/cirosantilli/cirosantilli.github.io/issues</a></div>
+        <div>Website source code: <a href="https://github.com/cirosantilli/cirosantilli.github.io">https://github.com/cirosantilli/cirosantilli.github.io</a></div>
+        <div>Website version: <a href="https://github.com/cirosantilli/cirosantilli.github.io/commit/eb25101a03eaaf01310d84739440307b0c4010be">eb25101a03eaaf01310d84739440307b0c4010be</a></div>
+    </footer>
     
 
     
