--- a/db/case-when.html
+++ b/db/case-when.html
@@ -81,6 +81,12 @@ SUM(column &gt; 0)
 <p>in MySQL. The more portable SQL equivalent is to use <code class="highlighter-rouge">CASE WHEN</code> with <code class="highlighter-rouge">null</code> for <code class="highlighter-rouge">COUNT</code> and <code class="highlighter-rouge">0</code> for <code class="highlighter-rouge">SUM</code>.</p>
 
     </main>
+    <footer>
+        <div>License: <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC-BY-SA 4.0</a> unless noted</div>
+        <div>Suggestions and corrections: <a href="https://github.com/cirosantilli/cirosantilli.github.io/issues">https://github.com/cirosantilli/cirosantilli.github.io/issues</a></div>
+        <div>Website source code: <a href="https://github.com/cirosantilli/cirosantilli.github.io">https://github.com/cirosantilli/cirosantilli.github.io</a></div>
+        <div>Website version: <a href="https://github.com/cirosantilli/cirosantilli.github.io/commit/eb25101a03eaaf01310d84739440307b0c4010be">eb25101a03eaaf01310d84739440307b0c4010be</a></div>
+    </footer>
     
 
     
