--- a/markdown-style-guide.html
+++ b/markdown-style-guide.html
@@ -287,8 +287,6 @@ Discussion will take place <a href="https://github.com/cirosantilli/issues">on t
   <li><a href="https://github.com/plasticboy/vim-markdown/blob/master/CONTRIBUTING.md#style">Vim Markdown</a></li>
 </ul>
 
-<p>Do you use this style guide? Add your name to <a href="https://github.com/cirosantilli/wiki/Users">our wiki</a>.</p>
-
 <p>Are you notable? Send a pull request.</p>
 
 <p>If you are a notable user:</p>
@@ -2479,6 +2477,12 @@ to help obscure your address from address-harvesting spambots”.</p>
 </blockquote>
 
     </main>
+    <footer>
+        <div>License: <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC-BY-SA 4.0</a> unless noted</div>
+        <div>Suggestions and corrections: <a href="https://github.com/cirosantilli/cirosantilli.github.io/issues">https://github.com/cirosantilli/cirosantilli.github.io/issues</a></div>
+        <div>Website source code: <a href="https://github.com/cirosantilli/cirosantilli.github.io">https://github.com/cirosantilli/cirosantilli.github.io</a></div>
+        <div>Website version: <a href="https://github.com/cirosantilli/cirosantilli.github.io/commit/eb25101a03eaaf01310d84739440307b0c4010be">eb25101a03eaaf01310d84739440307b0c4010be</a></div>
+    </footer>
     
 
     
