--- a/web/bower/index.html
+++ b/web/bower/index.html
@@ -97,6 +97,12 @@
 <p>Some programmers favor tracking even <code class="highlighter-rouge">bower_components</code> in case GitHub is down or dependencies become unavailable. <a href="http://stackoverflow.com/questions/22327758/should-bower-components-be-gitignored">http://stackoverflow.com/questions/22327758/should-bower-components-be-gitignored</a></p>
 
     </main>
+    <footer>
+        <div>License: <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC-BY-SA 4.0</a> unless noted</div>
+        <div>Suggestions and corrections: <a href="https://github.com/cirosantilli/cirosantilli.github.io/issues">https://github.com/cirosantilli/cirosantilli.github.io/issues</a></div>
+        <div>Website source code: <a href="https://github.com/cirosantilli/cirosantilli.github.io">https://github.com/cirosantilli/cirosantilli.github.io</a></div>
+        <div>Website version: <a href="https://github.com/cirosantilli/cirosantilli.github.io/commit/eb25101a03eaaf01310d84739440307b0c4010be">eb25101a03eaaf01310d84739440307b0c4010be</a></div>
+    </footer>
     
 
     
