--- a/web/chrome.html
+++ b/web/chrome.html
@@ -46,6 +46,12 @@
 <p>Multiple profiles: <a href="http://www.howtogeek.com/100999/how-to-use-multiple-profiles-in-google-chrome-like-a-ninja/">http://www.howtogeek.com/100999/how-to-use-multiple-profiles-in-google-chrome-like-a-ninja/</a></p>
 
     </main>
+    <footer>
+        <div>License: <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC-BY-SA 4.0</a> unless noted</div>
+        <div>Suggestions and corrections: <a href="https://github.com/cirosantilli/cirosantilli.github.io/issues">https://github.com/cirosantilli/cirosantilli.github.io/issues</a></div>
+        <div>Website source code: <a href="https://github.com/cirosantilli/cirosantilli.github.io">https://github.com/cirosantilli/cirosantilli.github.io</a></div>
+        <div>Website version: <a href="https://github.com/cirosantilli/cirosantilli.github.io/commit/eb25101a03eaaf01310d84739440307b0c4010be">eb25101a03eaaf01310d84739440307b0c4010be</a></div>
+    </footer>
     
 
     
