--- a/web/phantomjs/index.html
+++ b/web/phantomjs/index.html
@@ -48,6 +48,12 @@
 <p>Why Phantom  is not a Node.js module: <a href="http://phantomjs.org/faq.html">http://phantomjs.org/faq.html</a>. The following module adds Node bindings to Phantom: <a href="https://github.com/sgentle/phantomjs-node">https://github.com/sgentle/phantomjs-node</a></p>
 
     </main>
+    <footer>
+        <div>License: <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC-BY-SA 4.0</a> unless noted</div>
+        <div>Suggestions and corrections: <a href="https://github.com/cirosantilli/cirosantilli.github.io/issues">https://github.com/cirosantilli/cirosantilli.github.io/issues</a></div>
+        <div>Website source code: <a href="https://github.com/cirosantilli/cirosantilli.github.io">https://github.com/cirosantilli/cirosantilli.github.io</a></div>
+        <div>Website version: <a href="https://github.com/cirosantilli/cirosantilli.github.io/commit/eb25101a03eaaf01310d84739440307b0c4010be">eb25101a03eaaf01310d84739440307b0c4010be</a></div>
+    </footer>
     
 
     
