409acecb84e59d0183a552e13fb2c270e301de0b

--- a/db/mysqldump.html
+++ b/db/mysqldump.html
@@ -79,7 +79,8 @@ mysqldump -u root -p"$PASS" $DB | mysql -u root -p"$PASS" $DB2
         <div>License: <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC-BY-SA 4.0</a> unless noted</div>
         <div>Suggestions and corrections: <a href="https://github.com/cirosantilli/cirosantilli.github.io/issues">https://github.com/cirosantilli/cirosantilli.github.io/issues</a></div>
         <div>Website source code: <a href="https://github.com/cirosantilli/cirosantilli.github.io">https://github.com/cirosantilli/cirosantilli.github.io</a></div>
-        <div>Website version: <a href="https://github.com/cirosantilli/cirosantilli.github.io/commit/eb25101a03eaaf01310d84739440307b0c4010be">eb25101a03eaaf01310d84739440307b0c4010be</a></div>
+        <div>Website version: <a href="https://github.com/cirosantilli/cirosantilli.github.io/commit/409acecb84e59d0183a552e13fb2c270e301de0b">409acecb84e59d0183a552e13fb2c270e301de0b</a></div>
+        <div>Cite with: <a href="https://zenodo.org/badge/latestdoi/16453261">this DOI</a></div>
     </footer>
     
 
