e2ff3d02303fa721b35de55931d5056b9667943d

--- a/adoc2.html
+++ b/adoc2.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>D3 - Ciro Santilli</title>
+    <title>Asciidoctor test 2 - Ciro Santilli</title>
     
     <link rel="shortcut icon" type="image/x-icon" href="/ciro-santilli-id-photo-2013.jpg" />
 
@@ -37,17 +37,33 @@
       </span>
     </header>
     <main>
-        <h1 class="page-title">D3</h1>
+        <h1 class="page-title">Asciidoctor test 2</h1>
         
-        <ol>
-  <li><a href="chart.html">Chart</a></li>
-  <li><a href="csv-no-header.html">CSV no header</a></li>
-  <li><a href="json.html">JSON</a></li>
-  <li><a href="category.html">category</a></li>
-  <li><a href="range.html">range</a></li>
-  <li><a href="bibliography.html">Bibliography</a></li>
-</ol>
-
+        <div class="sect1">
+<h2 id="xref2"><a class="anchor" href="#xref2"></a><a class="link" href="#xref2">1. xref2</a></h2>
+<div class="sectionbody">
+<div class="sect2">
+<h3 id="asciidoctor-test-2-h3"><a class="anchor" href="#asciidoctor-test-2-h3"></a><a class="link" href="#asciidoctor-test-2-h3">1.1. Asciidoctor test 2 h3</a></h3>
+<div class="paragraph">
+<p>See this listing: <a href="#my-listing">My listing</a>:</p>
+</div>
+<div id="my-listing" class="listingblock">
+<div class="title">Listing  1. My listing</div>
+<div class="content">
+<pre>My
+favorite
+listing</pre>
+</div>
+</div>
+<div id="my-image" class="imageblock">
+<div class="content">
+<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/01/Cost_per_Genome.png/1024px-Cost_per_Genome.png" alt="1024px Cost per Genome" height="400">
+</div>
+<div class="title">Figure 1. My image</div>
+</div>
+</div>
+</div>
+</div>
     </main>
     <footer>
         <div>License: <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC-BY-SA 4.0</a> unless noted</div>
